--- a/_data/members.yml
+++ b/_data/members.yml
@@ -11,7 +11,7 @@ TAs:
 #
 # Students here
 "Fall 2021 Students":
-
+  - evaa21.github.io/
 "Spring 2021 Students":
   - vkashiwai.github.io/
   - aaranm.github.io/
